@@ -1,3 +1,10 @@
+2001-08-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (format_timeout): Added `Y' for years, and `M' for
+	months.
+
+	(seconds): Ditto.
+
 2001-08-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.32 development.
